--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 2000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 2000",
     "lint": "next lint",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.2",
     "jsdom": "^23.0.1",
     "next": "14.0.3",
     "react": "^18",
