--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "vitest": "^1.0.4"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitest/coverage-v8": "^1.0.4",
