--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
