--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-spinners": "^0.13.8",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
