--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
+    "request": "^2.88.2",
     "sass": "^1.69.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
@@ -40,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/request": "^2.48.12",
     "@types/uuid": "^9.0.7",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
