--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,16 @@
 {
-  "name": "Interativa Delivery PWA App",
-  "short_name": "Interativa Telecom",
+  "name": "Interativa Telecom",
+  "short_name": "Interativa Delivery",
   "icons": [
     {
-      "src": "/icon-mobile.svg",
+      "src": "/logo.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/next.svg",
-      "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
   "theme_color": "#FFFFFF",
-  "background_color": "#e7411b",
+  "background_color": "#fff",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
