--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 2000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 2000",
+    "start": "next start",
     "lint": "next lint",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
