--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
+    "cpf-cnpj-validator": "^1.0.3",
     "jsdom": "^23.0.1",
     "next": "14.0.3",
     "react": "^18",
